@@ -84,7 +84,7 @@
 	<div class="container">
 		<!-- row -->
 		<div class="row">
-aa
+
 			<!-- Products tab & slick -->
 			<div class="col-md-12">
 				<div class="row">
